# pyodide-kernel

./: .eslintignore  .eslintrc.js  .gitignore  .gitpod.yml  .prettierignore  .prettierrc  .readthedocs.yml  .yarnrc.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  nx.json  package.json  pyproject.toml  requirements-dev.txt  tsconfigbase.json
.github/workflows/: build.yml  check-release.yml  enforce-labels.yml  prep-release.yml  publish-release.yml  rtd-preview.yml  test.yml
.yarn/patches/: @jupyterlite-contents-npm-0.6.0-alpha.4-8f7b71da54.patch  @jupyterlite-contents-npm-0.6.0-alpha.7-02d158e60a.patch  @jupyterlite-contents-npm-0.7.0-alpha.1-3bda181fd2.patch  @jupyterlite-contents-npm-0.7.0-alpha.3-6e0d46ab59.patch  @jupyterlite-contents-npm-0.7.0-alpha.5-2801e8036a.patch  @jupyterlite-contents-npm-0.7.0-beta.1-9318c0f09b.patch  @jupyterlite-contents-workspace-841a3437e9.patch  @jupyterlite-kernel-npm-0.6.0-alpha.7-51d586bab6.patch  @jupyterlite-server-npm-0.6.0-alpha.4-bf69d13e18.patch  @jupyterlite-server-npm-0.6.0-alpha.7-3bfa417819.patch
binder/: environment.yml  postBuild
docs/: conf.py  contributing.md  environment.yml  index.md  jupyter-lite.json
docs/_static/: variables.css
examples/: constraints.txt  intro.ipynb  jupyter-lite.json  jupyter_lite_config.json  lite-constraints.txt  requirements.txt
examples/pypi/: repodata.json
jupyterlite_pyodide_kernel/: __init__.py  _version.py  app.py  constants.py  piplite.py  pyodide.py  utils.py  wheel_utils.py
jupyterlite_pyodide_kernel/addons/: _base.py  lock.py  piplite.py  pyodide.py
jupyterlite_pyodide_kernel/tests/: conftest.py  test_js_wheels.py  test_lock.py  test_metadata.py  test_piplite.py  test_pyodide.py  test_repo.py  test_utils.py
scripts/: bump-version.py
src/: index.ts
src/jupyterlite_pyodide_kernel/: constants.py  wheel_utils.py
src/jupyterlite_pyodide_kernel/addons/: _base.py  piplite.py  pyodide.py
src/jupyterlite_pyodide_kernel/tests/: conftest.py  test_examples.py  test_piplite.py  test_repo.py
ui-tests/: README.md  jupyter_lite_config.json  package.json  playwright.config.js  requirements.txt
ui-tests/tests/: general.spec.ts
