[build-system]
requires = [
    "hatchling>=1.4.0",
    "jupyterlab>=3.5.3,<3.6",
]
build-backend = "hatchling.build"

[project]
name = "jupyterlite-pyodide-kernel"
dynamic = ["version"]
readme = "README.md"
description = "Python kernel for JupyterLite powered by Pyodide"
authors = [
    { name = "JupyterLite Contributors" },
]
keywords = [
    "jupyterlite",
    "jupyter",
    "jupyterlab",
    "notebook",
    "browser",
    "pyodide",
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    # TODO: require 0.1.0b19 as min version
    "jupyterlite-core >=0.1.0a0,<0.2.0",
    "pkginfo",
    "packaging",
]

[project.urls]
Homepage = "https://jupyterlite-pyodide-kernel.readthedocs.io"
Documentation = "https://jupyterlite-pyodide-kernel.readthedocs.io"
Source = "https://github.com/jupyterlite/pyodide-kernel"
Issues = "https://github.com/jupyterlite/pyodide-kernel/issues"
PyPI = "https://pypi.org/project/jupyterlite-pyodide-kernel"

[project.scripts]
jupyter-piplite = "jupyterlite_pyodide_kernel.app:main"

[project.entry-points."jupyterlite.addon.v0"]
jupyterlite-pyodide-kernel-piplite = "jupyterlite_pyodide_kernel.addons.piplite:PipliteAddon"
jupyterlite-pyodide-kernel-pyodide = "jupyterlite_pyodide_kernel.addons.pyodide:PyodideAddon"

[project.optional-dependencies]
dev = [
    "build",
    "hatch",
    "jupyterlab >=3.5.3,<3.6",
]

lint = [
    "black",
    "ruff",
]

test = [
    "pytest-console-scripts",
    "pytest-cov",
    "pytest-html",
    "pytest-xdist",
    "pytest",
]

docs = [
    "ipywidgets>=8.0,<9",
    "jupyterlab-language-pack-fr-FR",
    "jupyterlab-language-pack-zh-CN",
    "myst-parser",
    "pydata-sphinx-theme",
    "sphinx-copybutton",
    # TODO: restore
    # "jupyterlite[mathjax,libarchive,lab]>=0.1.0b19",
    "jupyter-server-mathjax",
    "libarchive-c"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "jupyterlite_pyodide_kernel/_version.py"

[tool.hatch.build.targets.sdist]
artifacts = ["jupyterlite_pyodide_kernel/labextension"]
exclude = [
    ".github",
    "/jupyterlite_pyodide_kernel/tests/fixtures/.pyodide"
]
include = [
    "/jupyterlite_pyodide_kernel",
    "/package.json",
    "/install.json",
    "/ts*.json",
    "/*.md"
]

[tool.hatch.build.targets.wheel]
include = [
    "/jupyterlite_pyodide_kernel",
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlite_pyodide_kernel/labextension" = "share/jupyter/labextensions/@jupyterlite/pyodide-kernel-extension"
"install.json" = "share/jupyter/labextensions/@jupyterlite/pyodide-kernel-extension/install.json"

[tool.pytest.ini_options]
addopts = [
    "--pyargs",
    "jupyterlite_pyodide_kernel",
    "-vv",
    "--ff",
    # asyncio
    "--script-launch-mode=subprocess",
    # parallel
    "-n=auto",
    # cov
    "--cov=jupyterlite_pyodide_kernel",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:build/reports/htmlcov",
    "--cov-branch",
    "--cov-fail-under=89",
    "--no-cov-on-fail",
    # html
    "--html=build/reports/pytest.html",
    "--self-contained-html",
]
testpaths = [
    "tests/",
]

[tool.jupyter-releaser.options]
version_cmd = "python scripts/bump-version.py"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install jupyterlab~=3.5.3 hatch",
    "python -m pip install -e .[dev]",
    "jlpm",
    "jlpm build:prod",
]
before-build-python = [
    "jlpm",
    "jlpm build:prod",
]

[tool.check-wheel-contents]
ignore = ["W002"]
