[build-system]
requires = [
    "hatchling>=1.4.0",
    "jupyterlab>=3.5.3,<3.6",
]
build-backend = "hatchling.build"

[project]
name = "jupyterlite-pyodide-kernel"
dynamic = ["version"]
readme = "README.md"
description = "Python kernel for JupyterLite powered by Pyodide"
authors = [
    { name = "JupyterLite Contributors" },
]
keywords = [
    "jupyterlite",
    "jupyter",
    "jupyterlab",
    "notebook",
    "browser",
    "pyodide",
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    # TODO: require 0.1.0b19 as min version
    "jupyterlite-core >=0.1.0a0,<0.2.0",
    "pkginfo",
    "packaging",
]

[project.urls]
Homepage = "https://jupyterlite-pyodide-kernel.readthedocs.io"
Documentation = "https://jupyterlite-pyodide-kernel.readthedocs.io"
Source = "https://github.com/jupyterlite/pyodide-kernel"
Issues = "https://github.com/jupyterlite/pyodide-kernel/issues"
PyPI = "https://pypi.org/project/jupyterlite-pyodide-kernel"

[project.scripts]
jupyter-piplite = "jupyterlite_pyodide_kernel.app:main"

[project.entry-points."jupyterlite.addon.v0"]
jupyterlite-pyodide-kernel-piplite = "jupyterlite_pyodide_kernel.addons.piplite:PipliteAddon"
jupyterlite-pyodide-kernel-pyodide = "jupyterlite_pyodide_kernel.addons.pyodide:PyodideAddon"

[project.optional-dependencies]
dev = [
    "build",
    "hatch",
    "jupyterlab >=3.5.3,<3.6",
]

lint = [
    "black",
    "ruff",
]

test = [
    "pytest-cov",
    "pytest-console-scripts",
    "pytest-html",
    "pytest-xdist",
    "pytest",
]

docs = [
    "ipywidgets>=8.0,<9",
    "jupyterlab-language-pack-fr-FR",
    "jupyterlab-language-pack-zh-CN",
    "myst-parser",
    "pydata-sphinx-theme",
    "sphinx-copybutton",
    # TODO: restore
    # "jupyterlite[mathjax,libarchive,lab]>=0.1.0b19",
    "jupyter-server-mathjax",
    "libarchive-c"
]

[tool.hatch.version]
path = "src/jupyterlite_pyodide_kernel/_version.py"

[tool.hatch.build.targets.sdist]
artifacts = ["src/jupyterlite_pyodide_kernel/labextension"]
exclude = [
    ".github",
    "/src/jupyterlite_pyodide_kernel/tests/fixtures/.pyodide"
]
include = [
    "/src/jupyterlite_pyodide_kernel",
    "/package.json",
    "/install.json",
    "/ts*.json",
    "/*.md"
]

[tool.hatch.build.targets.wheel]
include = [
    "/src/jupyterlite_pyodide_kernel",
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.shared-data]
"src/jupyterlite_pyodide_kernel/labextension" = "share/jupyter/labextensions/@jupyterlite/pyodide-kernel-extension"
"install.json" = "share/jupyter/labextensions/@jupyterlite/pyodide-kernel-extension/install.json"

[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--ff",
    # only test as-installed package
    "--pyargs",
    "jupyterlite_pyodide_kernel",
    # asyncio
    "--script-launch-mode=subprocess",
    # parallel
    "-n=auto",
    # coverage scope
    "--cov=jupyterlite_pyodide_kernel",
    # coverage options
    "--cov-branch",
    "--cov-context=test",
    # coverage reporting
    "--cov-report=html:build/reports/htmlcov",
    "--cov-report=term-missing:skip-covered",
    # coverage threshold (local will be slightly be higher)
    "--cov-fail-under=92",
    # html
    "--html=build/reports/pytest.html",
    "--self-contained-html",
]

[tool.coverage.run]
data_file = "build/reports/.coverage"
omit = [
    "*/tests/*",
]

[tool.coverage.html]
show_contexts = true

[tool.coverage.paths]
jupyterlite_pyodide_kernel = [
    "src/jupyterlite_pyodide_kernel",
    "*/src/jupyterlite_pyodide_kernel"
]
omit = [
    "*/tests/*",
]

[tool.coverage.report]
omit = [
    "*/tests/*",
]


[tool.jupyter-releaser.options]
version_cmd = "python scripts/bump-version.py"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install jupyterlab~=3.5.3 hatch",
    "python -m pip install -e .[dev]",
    "jlpm",
    "jlpm build:prod",
]
before-build-python = [
    "jlpm",
    "jlpm build:prod",
]

[tool.check-wheel-contents]
ignore = ["W002"]
